# rilai-agent

./: .gitignore  CLAUDE.md  CURRENT_ARCHITECTURE.md  README.md  config.example.py  pyproject.toml
prompts/agents/creative/: brainstormer.md  brainstormer.yaml  frame_builder.md  frame_builder.yaml  synthesizer.md  synthesizer.yaml
prompts/agents/emotion/: mood_regulator.md  mood_regulator.yaml  motivation.md  motivation.yaml  stress.md  stress.yaml  wanting.md  wanting.yaml  wellbeing.md  wellbeing.yaml
prompts/agents/execution/: context_manager.md  context_manager.yaml  executor.md  executor.yaml  general_responder.md  general_responder.yaml  habits.md  habits.yaml  output_filter.md  output_filter.yaml  script_runner.md  script_runner.yaml
prompts/agents/inhibition/: censor.md  censor.yaml  exception_handler.md  exception_handler.yaml  suppressor.md  suppressor.yaml
prompts/agents/monitoring/: anomaly_detector.md  anomaly_detector.yaml  attention.md  attention.yaml  interrupt_manager.md  interrupt_manager.yaml  (+2 more)
rilai-v3-plans/: 00-overview.md  01-contracts.md  02-event-store.md  03-runtime-core.md  04-workspace.md  05-agents.md  06-deliberation.md  07-council-voice.md  08-memory.md  09-tui.md  10-daemon.md  11-migration.md  12-wire-up-pipeline.md
scenarios/: office_day.jsonl
src/rilai/: __init__.py  __main__.py  cli.py
tests/: test_agents.py  test_contracts.py  test_council_voice.py  test_daemon.py  test_deliberation.py  test_emotional_depth.py  test_memory.py  test_runtime.py  test_store.py  test_synthesizer_prompts.py  test_ui.py  test_workspace.py
(+271 files in other folders)
