[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rilai"
version = "3.0.0"
description = "Cognitive architecture for AI companionship - Event-sourced Society of Mind"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Szymon" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "textual>=0.89.0",          # TUI framework
    "httpx>=0.28.1",            # HTTP client for OpenRouter
    "pydantic>=2.0.0",          # Data validation
    "jinja2>=3.1.0",            # Prompt templates
    "rich>=13.0.0",             # Pretty printing (textual dep)
    "aiosqlite>=0.20.0",        # Async SQLite for permanent storage
    "websockets>=12.0",         # WebSocket client for ElevenLabs STT
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
rilai = "rilai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rilai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["rilai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
